@@ -538,7 +538,7 @@ R Query::aggregate(R (ColType::*aggregateMethod)(size_t start, size_t end, size_
     **************************************************************************************************************/
 
     void Query::aggregate_internal(Action TAction, DataType TSourceColumn,
-                                   ParentNode* pn, QueryStateBase* st, 
+                                   ParentNode* pn, QueryStateBase* st,
                                    size_t start, size_t end, SequentialGetterBase* source_column) const
     {
         if (end == not_found)
@@ -675,7 +675,7 @@ Query& Query::group()
 Query& Query::end_group()
 {
     if (first.size() < 2) {
-        error_code = "Unbalanced blockBegin/blockEnd";
+        error_code = "Unbalanced group";
         return *this;
     }
 
@@ -718,6 +718,11 @@ void Query::subtable(size_t column)
 
 void Query::end_subtable()
 {
+    if (subtables.size() == 0) {
+        error_code = "Unbalanced subtable";
+        return;
+    }
+
     end_group();
 
     if (update[update.size()-1] != 0)
@@ -1075,4 +1080,3 @@ Query Query::operator&&(Query q)
 
     return q2;
 }
-
