@@ -11,6 +11,9 @@ Format:
 . Any other notes ....                   (internal changes)
 
 
+2014-01-23 (Kenneth Geisshirt)
+! Fixed bug: Subtable queries is validated by Query::validate(). An invalid subtable query can lead to a segfault.
+
 2014-01-07 (Kenneth Geisshirt)
 + Table::range() added. The method returns a set of rows as a TableView.
 
